# django-study-project

./: README.md  manage.py  pyproject.toml
django_study_project/: asgi.py  settings.py  urls.py  views.py  wsgi.py
django_study_project/women/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
django_study_project/women/migrations/: 0001_initial.py
django_study_project/women/templates/women/: about.html  addpage.html  base.html  index.html  list_categories.html  post.html
django_study_project/women/templatetags/: women_tags.py
